# ethminer

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
_3rdParty/Hunter/: install-root-dir
_3rdParty/Hunter/config-id/: config.cmake
_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
bench/: CMakeLists.txt
data/: 30-baseline  help  testset
ethminer/: Makefile  MinerAux.h  cmake_install.cmake  ethminer  main.cpp
libapicore/: Makefile  cmake_install.cmake
libdevcore/: Makefile  cmake_install.cmake
libethash/: Makefile  cmake_install.cmake
libethash-cl/: Makefile  cmake_install.cmake
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  Makefile  cmake_install.cmake  cuda_helper.h  dagger_shared.cuh  dagger_shuffled.cuh  dagger_shuffled_optimized.cuh  dagger_shuffled_optimized2.cuh  dagger_shuffled_p.cuh  dagger_shuffled_sp.cuh  ethash_cuda_miner.cpp  ethash_cuda_miner_kernel.cu  ethash_cuda_miner_kernel.h
libethcore/: Farm.h  Makefile  cmake_install.cmake
libhwmon/: Makefile  cmake_install.cmake
libstratum/: Makefile  cmake_install.cmake
